1.8.8 (22.10.2017):

* Filter out 1 and 2 digit integers from tool warnings.
  Show original message, not filtered message.
  Closes bug #281 (Error processing with Tesserarct: Detected 99 Diacritics)
* Add option to profile only after successfully applying it
* Fix default value for unpaper script direction.


1.8.7 (22.09.2017):

* + units to scan and edit paper dialogues.
* - unsupported libsane-perl offered as Frontend choice
  Thanks to Chris Mayo for the patch. Closes merge request #19
* Fixed support for Poppler (pdftops) as postscript backend.
  Thanks to Chris Mayo for the patch. Closes merge request #18
* - Reload recursion limit in Edit/Preferences
  Set reload recursion limit as triangular number of number of scan options.
  i.e. if there are 5 scan options, the recursion limit is 5+4+3+2+1=15
  Closes bug #275 (reload recursion limit)
* Fixed crash with scanimage frontend due to empty cache
* Ghost save button, rather than hiding save dialogue if all pages removed.
  Closes bug #253 (Save dialoque does not stay open)
* Fixed bug causing profile dropdown to be cleared after setting profile
* Filter out integers from tool warnings, analogous to the hex warnings from
  unpaper.
* Fixed visibility of options in save dialogue (again).
* Right mouse click in thumbnail panel makes the page range (e.g. in save
  dialogue) default to "selected".
* Take filename of PDF to email from default filename settings (and therefore
  from metadata). If this produces a blank filename, use "document.pdf".
* Fixed bug requiring scan dialog to be requested twice after changing frontend
* Update to Hungarian translation (thanks to csola)


1.8.6 (22.08.2017):

* Fixed visibility of options for DjVu, JPEG, & TIFF in save dialogue.
* + Reload recursion limit in Edit/Preferences
  Break of out reload recursion loop if maximum number of reloads is exceeded.
* Reapply only those current scan settings that were reset by the reload
* Fixed unpaper detection for v0.3.