@@ -595,7 +595,7 @@ sub _add_device_combobox {
                     if ( $_->{name} eq $device ) {
                         Gscan2pdf::Dialog::Scan::set_combobox_by_text(
                             $self->{combobd}, $_->{label} );
-                        $self->scan_options;
+                        $self->scan_options($device);
                         return;
                     }
                 }
