@@ -472,8 +472,17 @@ sub scan {
 
             if ( $self->get('cycle-sane-handle') ) {
                 my $current = $self->get('current-scan-options');
+                my $signal;
+                $signal = $self->signal_connect(
+                    'finished-process' => sub {
+                        my ( $widget, $data ) = @_;
+                        if ( $data eq 'find_scan_options' ) {
+                            $self->signal_handler_disconnect($signal);
+                            $self->set_current_scan_options($current);
+                        }
+                    }
+                );
                 $self->scan_options( $self->get('device') );
-                $self->set_current_scan_options($current);
             }
         },
         new_page_callback => sub {
