@@ -5,6 +5,8 @@
   Closes bug #281 (Error processing with Tesserarct: Detected 99 Diacritics)
 * Add option to profile only after successfully applying it
 * Fix default value for unpaper script direction.
+* Fix race condition updating widgets before they can be created after cycling
+  device handle.
 
 
 1.8.7 (22.09.2017):
